--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .DS_Store
+.gitignore
 node_modules/
 /dist/
 npm-debug.log*
@@ -8,6 +9,7 @@ yarn-error.log*
 # Editor directories and files
 .idea
 .vscode
+.editorconfig
 *.suo
 *.ntvs*
 *.njsproj
